# Compression_Decompression

./: .gitignore  CMakeLists.txt  Compression_Decompression.sln
Compression_Decompression/: Compression_Decompression.c  Compression_Decompression.vcxproj  Compression_Decompression.vcxproj.filters  RCa16568  compression.c  compression.h  compressor_decompressor.c  compressor_decompressor.h  decompressed  decompressed.txt  decompressed11.txt  decompression.c  decompression.h  end_to_end_test.c  end_to_end_test.h  file_managment.c  file_managment.h  file_test.c  file_test.h  general_define.h  general_defines.c  getopt.c  getopt.h  huffman_code.c  huffman_code.h  huffman_struct.h  huffman_test.c  input.txt  log.c  log.h  logger  logger.h  lz77.c  lz77.h  lz77_test.c  lz77_test.h  priority_queue.c  priority_queue.h  resource.h  test_file
Testing_Compression_Decompression/: Testing_Compression_Decompression.c  Testing_Compression_Decompression.vcxproj  Testing_Compression_Decompression.vcxproj.filters  algorithms_test.c  algorithms_test.h  decompressed_test  decompressed_test.m4a  decompressed_test.txt  end_to_end_test.c  end_to_end_test.h  file_test.c  file_test.h  huffman_test.c  huffman_test.h  input_test.asd  input_test.docx  input_test.txt  lz77_test.c  lz77_test.h  test_file  test_framework.c  test_framework.h
Testsing/: Testsing.vcxproj  Testsing.vcxproj.filters  end_to_end_test.c  end_to_end_test.h  lz77_test.c  lz77_test.h  main.c  test_framework.c  test_framework.h
enc_temp_folder/32d3f9891f80cb89bb1618ece839bfb0/: compressor_decompressor.c
enc_temp_folder/4b3bdec01c72194429f6c513528bd97f/: huffman_code.c
enc_temp_folder/6613827cfe4441db59a74e5a45853cd/: end_to_end_test.h
enc_temp_folder/6cdc3707cfb996c36b3b0ba3a3c4d42/: compressor_decompressor.c
(+1 files in other folders)
